...I think that sorts it out

--- a/templates/gold.init.d.erb
+++ b/templates/gold.init.d.erb
@@ -15,7 +15,7 @@
 
 RETVAL=0
 prog="gold"
-export GOLD_HOME=@prefix@
+export GOLD_HOME=/opt/gold
 
 PIDFILE=$GOLD_HOME/etc/$prog.pid
 LOCKFILE=/var/lock/subsys/$prog
