hmm, try this status command

--- a/templates/gold.init.d.erb
+++ b/templates/gold.init.d.erb
@@ -45,7 +45,7 @@ case "$1" in
         $0 start
 		;;
     status)
-        status -p $PIDFILE $GOLD_HOME/sbin/goldd
+        status $prog
         RETVAL=$?
         ;;
     *)
